todoリスト作成

--- a/authtest/templates/authtest/home.html
+++ b/authtest/templates/authtest/home.html
@@ -9,5 +9,9 @@
     <p>You are not logged in.</p>
     <p><a href="{% url 'login' %}">login</a></p>
     {% endif %}
+
+    <hr>
+    <p><a href="{% url 'todo_list' %}">todo_list</a></p>
+
 </body>
 </html>
