--- a/authtest/templates/authtest/home.html
+++ b/authtest/templates/authtest/home.html
@@ -1,17 +1,34 @@
-<html lang="ja"><head><meta charset="utf-8"></head>
+{% load static %}
+<!DOCTYPE html>
+<html lang="ja">
+  <head>
+    <meta charset="utf-8">
+    <link href="{% static 'authtest/css/home_design.css' %}" rel="stylesheet">
+  </head>
   <body>
+    <div id="title">
     <h1>Home</h1>
+    </div>
 
     {% if user.is_authenticated %}
-    <p>Hi {{ user.username }}!</p>
-    <a href="{% url 'logout' %}">logout</a>
-    {% else %}
-    <p>You are not logged in.</p>
-    <p><a href="{% url 'login' %}">login</a></p>
-    {% endif %}
+    <div class="userArea">
+      <p class="userIdea">Welcome, {{ user.username }}!</p>
+      <p class="userIdea">Todo Listを作成しましょう!!</p>
 
-    <hr>
-    <p><a href="{% url 'todo_list' %}">todo_list</a></p>
+      
+        <a href="{% url 'todo_list' %}"><button id="pageButton">TodoListへ</button></a>
+        <a href="{% url 'logout' %}"><button id="logoutButton">logout</button></a>
+    </div>
+    {% else %}
+
+    <div class="userArea">
+    <p class="userIdea">Welcome!!</p>
+    <p class="userIdea">Todo Listを作成しましょう!!</p>
+    <a href="{% url 'login' %}"><button id="loginButton">Login</button></a>
+    <a href="{% url 'withoutLogin' %}"><button id="withoutLoginButton">Start Without Login</button></a>
+    </div>
+
+    {% endif %}
 
 </body>
 </html>
