--- a/authtest/templates/authtest/edit.html
+++ b/authtest/templates/authtest/edit.html
@@ -52,7 +52,7 @@
                     <textarea name="notes" id="textBox" placeholder="notes..."></textarea>
                 </div>
                 <div id="submitButtonPosition">
-                <button type="submit" name="edit_todo" id="submitButton">Add ToDo Item</button>
+                <button type="submit" name="edit_todo" id="submitButton">Edit ToDo Item</button>
                 </div>
         </form>
     </body>
